# Mutts-Backend

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
backend/alembic/: env.py
backend/alembic/versions/: 2255ef01f035_.py  8ab3275a5ee7_.py  e1c51cf03a79_.py
backend/app/: config.py  database.py  game_constants.py  main.py
backend/app/auth/models/: __init__.py  token.py
backend/app/auth/routes/: __init__.py  auth_route.py
backend/app/auth/services/: __init__.py  auth_services.py
backend/app/auth/utils/: __init__.py  auth_utils.py
backend/app/core/: calculate_rating.py  dependencies.py  redis.py  timer_manager.py
backend/app/enums/: __init__.py  battle.py  unit_type.py
backend/app/models/: __init__.py  game.py  player.py  unit.py  unit_config.py  user.py
backend/app/repositories/: __init__.py  base.py  game_repository.py  player_repository.py  unit_repository.py  user_repository.py
backend/app/routes/: __init__.py  game_route.py  matchmaking_route.py  unit_config_route.py
backend/app/schemas/: __init__.py  battle.py  game_schema.py  player_schema.py  unit_schema.py  user_schema.py
backend/app/services/: __init__.py  game_service.py  matchmaking_service.py  user_service.py
backend/app/services/battle/: __init__.py  battle_simulator.py  combat.py  game_ai.py  pathfinding.py
backend/docs/: AUTHENTICATION.md  BATTLE_SYSTEM.md  GAME_FLOW.md  README.md  REST_API.md  UNIT_CONFIG.md  WEBSOCKET_API.md
