[project]
name = "mutts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.135.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "PyJWT>=2.12.1",
    "python-multipart>=0.0.26",
    "redis>=7.4.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
]
